--- a/src/app/dialogs/launch-analysis/launch-analysis.component.html
+++ b/src/app/dialogs/launch-analysis/launch-analysis.component.html
@@ -120,9 +120,9 @@
         <div class="field">
           <label class="label">Expression Weights</label>
           <app-launch-analysis-category-dropdown
-            [categories]="analysis.getTissues()"
-            [selectedCategory]="selectedTissue"
-            (selectedCategoryChange)="setSelectedTissue($event)">
+            [categories]="analysis.getExpressionCancerTypes()"
+            [selectedCategory]="selectedExpressionCancerType"
+            (selectedCategoryChange)="setSelectedExpressionCancerType($event)">
           </app-launch-analysis-category-dropdown>
         </div>
 
@@ -208,9 +208,9 @@
         <div class="field">
           <label class="label">Expression Weights</label>
           <app-launch-analysis-category-dropdown
-            [categories]="analysis.getTissues()"
-            [selectedCategory]="selectedTissue"
-            (selectedCategoryChange)="setSelectedTissue($event)">
+            [categories]="analysis.getExpressionCancerTypes()"
+            [selectedCategory]="selectedExpressionCancerType"
+            (selectedCategoryChange)="setSelectedExpressionCancerType($event)">
           </app-launch-analysis-category-dropdown>
         </div>
       </div>
@@ -329,9 +329,9 @@
         <div class="field">
           <label class="label">Expression Weights</label>
           <app-launch-analysis-category-dropdown
-            [categories]="analysis.getTissues()"
-            [selectedCategory]="selectedTissue"
-            (selectedCategoryChange)="setSelectedTissue($event)">
+            [categories]="analysis.getExpressionCancerTypes()"
+            [selectedCategory]="selectedExpressionCancerType"
+            (selectedCategoryChange)="setSelectedExpressionCancerType($event)">
           </app-launch-analysis-category-dropdown>
         </div>
 
@@ -398,9 +398,9 @@
         <div class="field">
           <label class="label">Expression Weights</label>
           <app-launch-analysis-category-dropdown
-            [categories]="analysis.getTissues()"
-            [selectedCategory]="selectedTissue"
-            (selectedCategoryChange)="setSelectedTissue($event)">
+            [categories]="analysis.getExpressionCancerTypes()"
+            [selectedCategory]="selectedExpressionCancerType"
+            (selectedCategoryChange)="setSelectedExpressionCancerType($event)">
           </app-launch-analysis-category-dropdown>
         </div>
       </div>
@@ -528,9 +528,9 @@
         <div class="field">
           <label class="label">Expression Weights</label>
           <app-launch-analysis-category-dropdown
-            [categories]="analysis.getTissues()"
-            [selectedCategory]="selectedTissue"
-            (selectedCategoryChange)="setSelectedTissue($event)">
+            [categories]="analysis.getExpressionCancerTypes()"
+            [selectedCategory]="selectedExpressionCancerType"
+            (selectedCategoryChange)="setSelectedExpressionCancerType($event)">
           </app-launch-analysis-category-dropdown>
         </div>
 
