--- a/src/styles.scss
+++ b/src/styles.scss
@@ -271,7 +271,7 @@ body {
   border: 1px solid black !important;
 }
 
-.tissue-dropdown {
+.expressionCancerType-dropdown {
   padding: 5px;
   background-color: rgba(255.0, 255.0, 255.0, 0.85);
 
