--- a/src/app/components/category-selector/category-selector.component.html
+++ b/src/app/components/category-selector/category-selector.component.html
@@ -13,7 +13,7 @@
     </button>
   </div>
   <div class="dropdown-menu" id="dropdown-menu" role="menu">
-    <div class="dropdown-content tissue-dropdown">
+    <div class="dropdown-content expressionCancerType-dropdown">
       <div class="scroll-area">
         <a (click)="onSelect(null)"
            [class.is-active]="!selectedElement"
