linting and adding alfred backend as localhost dev backend

--- a/src/app/pages/explorer-page/explorer-page.component.html
+++ b/src/app/pages/explorer-page/explorer-page.component.html
@@ -155,7 +155,7 @@
                   [selectedElement]="selectedExpressionCancerType"
                   [elements]="analysis.getExpressionCancerTypes()"
                   (callbackFun)="selectExpressionCancerType($event)"
-                  label="ExpressionCancerType"
+                  label="Expression"
                   class="footer-buttons is-inline-block"
                 ></app-category-selector>
 
