--- a/src/app/dialogs/vcf-input/vcf-input.component.html
+++ b/src/app/dialogs/vcf-input/vcf-input.component.html
@@ -40,7 +40,7 @@
           </div>
         </div>
         <div class="field">
-          <label for="file">Choose File</label>
+          <label for="file">Choose a file (VCF 4.1, 4.2)</label>
           <div class="control">
             <input type="file"
                    id="file"
