--- a/src/app/components/info-tile/info-tile.component.html
+++ b/src/app/components/info-tile/info-tile.component.html
@@ -26,6 +26,11 @@
       <b><span>Protein Name:</span></b>
       {{ wrapper.data.proteinName }}
     </p>
+    <p *ngIf="wrapper.data.expressionLevel"
+       class="has-tooltip-right" data-tooltip="Expression level in selected cancer type or tissue (normalized from 0 to 1)">
+      <b><span>Expression Level:</span></b>
+      {{ wrapper.data.expressionLevel | number : '1.0-3'  }}
+    </p>
     <p *ngIf="wrapper.data.mutationScore"
        class="has-tooltip-right" data-tooltip="Based on number of mutations. See 'About' for more information">
       <b><span>Mutation Score:</span></b>
@@ -82,6 +87,11 @@
     <p *ngIf="wrapper.data.proteinName">
       <b><span>Protein Name:</span></b>
         {{ wrapper.data.proteinName }}
+    </p>
+    <p *ngIf="wrapper.data.expressionLevel"
+       class="has-tooltip-right" data-tooltip="Expression level in selected cancer type or tissue (normalized from 0 to 1)">
+      <b><span>Expression Level:</span></b>
+      {{ wrapper.data.expressionLevel | number : '1.0-3'  }}
     </p>
     <p *ngIf="wrapper.data.mutationScore"
        class="has-tooltip-right" data-tooltip="Based on number of mutations. See 'About' for more information">
