--- a/src/app/dialogs/vcf-input/vcf-input.component.html
+++ b/src/app/dialogs/vcf-input/vcf-input.component.html
@@ -48,6 +48,11 @@
           </div>
         </div>
       </div>
+      <div clas="field">
+        <p>Note: Interpreting large files of multiple MB takes up to 30 min. It will continue after closing
+          this dialogue, but do not close or refresh the window.
+        </p>
+      </div>
     </section>
     <footer class="modal-card-foot">
       <button (click)="loadSeeds();" class="button is-success   has-tooltip"
