--- a/src/scaffold.scss
+++ b/src/scaffold.scss
@@ -3,6 +3,7 @@ $sidebar-width-max: 665px;
 $navbar-height: 80px;
 $row-data-selector-height: auto;
 $network-footer-height: 75px;
+$network-header-height: 50px;
 
 $navbar-background-color: #143d1f;//#86D16B;//#D0D8D2;//#F5F0F5;
 
@@ -20,3 +21,4 @@ $legend-circle-size: 35px;
 $legend-rectangle-height: 25px;
 $legend-rectangle-width: 35px;
 $legend-rectangle-radius: 5px;
+$legend-width: 150px;
