--- a/src/styles.scss
+++ b/src/styles.scss
@@ -238,9 +238,13 @@ div.field.has-addons.add-remove-toggle {
 .network-footer-container {
   display: flex;
   flex-wrap: wrap;
+  position: absolute;
+  bottom: 0;
+  background: white;
   .footer-buttons {
     margin-left: 5px;
     margin-right: 5px;
+    margin-bottom: 5px;
   }
 }
 
@@ -288,9 +292,14 @@ body {
 
 .legend {
   position: absolute;
-  bottom: 0;
+  top: 0px;
+  right: 0px;
   &.main {
-    bottom: calc(0px + #{$network-footer-height});
+    top: calc(1.5rem + #{$network-header-height});
+    right: 10px;
+  }
+  &.pushed-left {
+    right: calc(10px + #{$legend-width});
   }
   td{
     height: $legend-circle-size;
@@ -378,9 +387,8 @@ body {
 
 .legend.gradient{
   height: 200px;
-  width: 150px;
+  width: $legend-width;
   position: absolute;
-  bottom: 0;
   right: -20px;
   &.main {
     bottom: calc(10px + #{$network-footer-height});
@@ -435,3 +443,4 @@ body {
   overflow-y: auto;
   height: calc(100vh - #{$navbar-height})
 }
+
