--- a/src/app/pages/explorer-page/explorer-page.component.scss
+++ b/src/app/pages/explorer-page/explorer-page.component.scss
@@ -72,3 +72,12 @@
   z-index: 30;
   margin-top: 40px;
 }
+
+.small-padding {
+  padding: 0.25rem;
+}
+
+.info-background {
+  background-color: rgba(64, 139, 37, 0.1);
+  padding: 1.25rem;
+}
