--- a/src/app/components/info-tile/info-tile.component.scss
+++ b/src/app/components/info-tile/info-tile.component.scss
@@ -1,14 +1,23 @@
 p {
   white-space: normal;
-  width: 200px;
 }
 
-.scroll-120{
+ul.scroll-120{
   max-height: 120px;
   overflow-y: auto;
   overflow-x: hidden;
-  ul {
-    white-space: normal;
-    width: 200px;
+  white-space: normal;
+  // -webkit-column-count: 2;
+  // -moz-column-count: 2;
+  // column-count: 2;
+  flex-wrap: wrap;
+  display: flex;
+  list-style: inside;
+  background-color: rgba(64, 139, 37, 0.2);
+  padding: 0.25rem;
+  border-radius: 10px;
+  margin-bottom: 0px;
+  li {
+    flex: 1 0 50%;
   }
-}
+  }
