--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,9 +55,10 @@ button.is-example {
   }
 }
 
-
-row-data-selector {
+.row-data-selector {
   height: $row-data-selector-height;
+  margin-left: 10px;
+  padding-top: 10px;
 }
 
 img.menu-icon.is-hoverable.navbar-item.logo {
@@ -131,7 +132,6 @@ div.caddie.bar-left {
   float: left;
   position: relative;
   z-index: 30;
-  padding-top: 10px;
 }
 
 div.caddie.bar-right {
@@ -206,7 +206,6 @@ div.center {
 
 div.caddie.explorer {
   height: calc(100vh - #{$navbar-height});
-  margin-left: 10px;
   margin-right: 10px;
 }
 
@@ -386,6 +385,10 @@ body {
   }
 }
 
+.self-align {
+  margin: 0 auto;
+}
+
 .loadingOverlay{
   position: absolute;
   top: 0;
@@ -455,5 +458,32 @@ body {
 .scrollable {
   overflow-y: auto;
   height: calc(100vh - #{$navbar-height})
+}
+
+html {
+  --scrollbarBG: rgba(64, 139, 37, 0.1);
+  --thumbBG: rgba(64, 139, 37, 0.5);
+}
+body::-webkit-scrollbar {
+  width: 5px;
+}
+body {
+  scrollbar-width: thin;
+  scrollbar-color: var(--thumbBG) var(--scrollbarBG);
+}
+body::-webkit-scrollbar-track {
+  background: var(--scrollbarBG);
+}
+body::-webkit-scrollbar-thumb {
+  background-color: var(--thumbBG) ;
+  border-radius: 6px;
+  border: 3px solid var(--scrollbarBG);
+}
+
+body::-moz-scrollbar-button:decrement,
+body::-moz-scrollbar-button:increment,
+body::-webkit-scrollbar-button:decrement,
+body::-webkit-scrollbar-button:increment {
+  width: 0px;
 }
 
